[gd_scene load_steps=16 format=2]

[ext_resource path="res://Items/Inventory.gd" type="Script" id=1]
[ext_resource path="res://Items/MenuSprites/menu1.png" type="Texture" id=2]
[ext_resource path="res://Items/M1.gd" type="Script" id=3]
[ext_resource path="res://Items/MenuSprites/Brackets1.png" type="Texture" id=4]
[ext_resource path="res://Items/MenuSprites/menu2.png" type="Texture" id=5]
[ext_resource path="res://Items/M2.gd" type="Script" id=6]
[ext_resource path="res://Items/MenuSprites/Brackets3_es.png" type="Texture" id=7]
[ext_resource path="res://Items/MenuSprites/menu3.png" type="Texture" id=8]
[ext_resource path="res://Items/M3.gd" type="Script" id=9]
[ext_resource path="res://Items/MenuSprites/Brackets3_op.png" type="Texture" id=10]
[ext_resource path="res://UI/FadeToWhite/FadeToWhite.tscn" type="PackedScene" id=11]

[sub_resource type="Animation" id=1]

resource_name = "Change1"
length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("ItemMenu/M1:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 80, 80 ), Vector2( -80, 80 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ItemMenu/M2:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 240, 80 ), Vector2( 80, 80 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("ItemMenu/M3:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 400, 80 ), Vector2( 240, 80 ) ]
}

[sub_resource type="Animation" id=2]

resource_name = "Change2"
length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("ItemMenu/M1:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 400, 80 ), Vector2( 240, 80 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ItemMenu/M2:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 80, 80 ), Vector2( -80, 80 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("ItemMenu/M3:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 240, 80 ), Vector2( 80, 80 ) ]
}

[sub_resource type="Animation" id=3]

resource_name = "Change3"
length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("ItemMenu/M1:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 240, 80 ), Vector2( 80, 80 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ItemMenu/M2:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 400, 80 ), Vector2( 240, 80 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("ItemMenu/M3:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 80, 80 ), Vector2( -80, 80 ) ]
}

[sub_resource type="Animation" id=4]

resource_name = "SetDefault"
length = 0.12
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("ItemMenu/M1:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 80, 80 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ItemMenu/M2:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 240, 80 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("ItemMenu/M3:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 400, 80 ) ]
}

[node name="Inventory" type="Node2D"]

script = ExtResource( 1 )
_sections_unfolded = [ "Z Index" ]

[node name="ItemMenu" type="CanvasLayer" parent="." index="0"]

layer = 3
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )
transform = Transform2D( 1, 0, 0, 1, 0, 0 )

[node name="M1" type="Sprite" parent="ItemMenu" index="0"]

position = Vector2( 80, 80 )
texture = ExtResource( 2 )
script = ExtResource( 3 )

[node name="Brackets" type="Node2D" parent="ItemMenu/M1" index="0"]

editor/display_folded = true
position = Vector2( -48, -32 )

[node name="0" type="Sprite" parent="ItemMenu/M1/Brackets" index="0"]

position = Vector2( 0, -16 )
texture = ExtResource( 4 )

[node name="1" type="Sprite" parent="ItemMenu/M1/Brackets" index="1"]

position = Vector2( 32, -16 )
texture = ExtResource( 4 )

[node name="2" type="Sprite" parent="ItemMenu/M1/Brackets" index="2"]

position = Vector2( 64, -16 )
texture = ExtResource( 4 )

[node name="3" type="Sprite" parent="ItemMenu/M1/Brackets" index="3"]

position = Vector2( 96, -16 )
texture = ExtResource( 4 )

[node name="4" type="Sprite" parent="ItemMenu/M1/Brackets" index="4"]

position = Vector2( 0, 8 )
texture = ExtResource( 4 )

[node name="5" type="Sprite" parent="ItemMenu/M1/Brackets" index="5"]

position = Vector2( 32, 8 )
texture = ExtResource( 4 )

[node name="6" type="Sprite" parent="ItemMenu/M1/Brackets" index="6"]

position = Vector2( 64, 8 )
texture = ExtResource( 4 )

[node name="7" type="Sprite" parent="ItemMenu/M1/Brackets" index="7"]

position = Vector2( 96, 8 )
texture = ExtResource( 4 )

[node name="8" type="Sprite" parent="ItemMenu/M1/Brackets" index="8"]

position = Vector2( 0, 32 )
texture = ExtResource( 4 )

[node name="9" type="Sprite" parent="ItemMenu/M1/Brackets" index="9"]

position = Vector2( 32, 32 )
texture = ExtResource( 4 )

[node name="10" type="Sprite" parent="ItemMenu/M1/Brackets" index="10"]

position = Vector2( 64, 32 )
texture = ExtResource( 4 )

[node name="11" type="Sprite" parent="ItemMenu/M1/Brackets" index="11"]

position = Vector2( 96, 32 )
texture = ExtResource( 4 )

[node name="12" type="Sprite" parent="ItemMenu/M1/Brackets" index="12"]

position = Vector2( 0, 56 )
texture = ExtResource( 4 )

[node name="13" type="Sprite" parent="ItemMenu/M1/Brackets" index="13"]

position = Vector2( 32, 56 )
texture = ExtResource( 4 )

[node name="14" type="Sprite" parent="ItemMenu/M1/Brackets" index="14"]

position = Vector2( 64, 56 )
texture = ExtResource( 4 )

[node name="15" type="Sprite" parent="ItemMenu/M1/Brackets" index="15"]

position = Vector2( 96, 56 )
texture = ExtResource( 4 )

[node name="M2" type="Sprite" parent="ItemMenu" index="1"]

position = Vector2( 240, 80 )
texture = ExtResource( 5 )
script = ExtResource( 6 )
_sections_unfolded = [ "Offset" ]

[node name="Brackets" type="Node2D" parent="ItemMenu/M2" index="0"]

editor/display_folded = true
position = Vector2( -48, -32 )

[node name="0" type="Sprite" parent="ItemMenu/M2/Brackets" index="0"]

position = Vector2( 0, -16 )
texture = ExtResource( 7 )

[node name="1" type="Sprite" parent="ItemMenu/M2/Brackets" index="1"]

position = Vector2( 24, -16 )
texture = ExtResource( 7 )

[node name="2" type="Sprite" parent="ItemMenu/M2/Brackets" index="2"]

position = Vector2( 48, -16 )
texture = ExtResource( 7 )

[node name="3" type="Sprite" parent="ItemMenu/M2/Brackets" index="3"]

position = Vector2( 72, -16 )
texture = ExtResource( 7 )

[node name="4" type="Sprite" parent="ItemMenu/M2/Brackets" index="4"]

editor/display_folded = true
position = Vector2( 100, -16 )
texture = ExtResource( 4 )

[node name="5" type="Sprite" parent="ItemMenu/M2/Brackets" index="5"]

position = Vector2( 0, 8 )
texture = ExtResource( 7 )

[node name="6" type="Sprite" parent="ItemMenu/M2/Brackets" index="6"]

position = Vector2( 24, 8 )
texture = ExtResource( 7 )

[node name="7" type="Sprite" parent="ItemMenu/M2/Brackets" index="7"]

position = Vector2( 48, 8 )
texture = ExtResource( 7 )

[node name="8" type="Sprite" parent="ItemMenu/M2/Brackets" index="8"]

position = Vector2( 72, 8 )
texture = ExtResource( 7 )

[node name="9" type="Sprite" parent="ItemMenu/M2/Brackets" index="9"]

position = Vector2( 100, 8 )
texture = ExtResource( 4 )

[node name="10" type="Sprite" parent="ItemMenu/M2/Brackets" index="10"]

position = Vector2( 0, 32 )
texture = ExtResource( 7 )

[node name="11" type="Sprite" parent="ItemMenu/M2/Brackets" index="11"]

position = Vector2( 24, 32 )
texture = ExtResource( 7 )

[node name="12" type="Sprite" parent="ItemMenu/M2/Brackets" index="12"]

position = Vector2( 48, 32 )
texture = ExtResource( 7 )

[node name="13" type="Sprite" parent="ItemMenu/M2/Brackets" index="13"]

position = Vector2( 72, 32 )
texture = ExtResource( 7 )

[node name="14" type="Sprite" parent="ItemMenu/M2/Brackets" index="14"]

position = Vector2( 100, 32 )
texture = ExtResource( 4 )

[node name="M3" type="Sprite" parent="ItemMenu" index="2"]

position = Vector2( 400, 80 )
texture = ExtResource( 8 )
script = ExtResource( 9 )

[node name="BracketsEscences" type="Node2D" parent="ItemMenu/M3" index="0"]

position = Vector2( -48, -32 )

[node name="0" type="Sprite" parent="ItemMenu/M3/BracketsEscences" index="0"]

position = Vector2( 8, -8 )
texture = ExtResource( 7 )

[node name="1" type="Sprite" parent="ItemMenu/M3/BracketsEscences" index="1"]

position = Vector2( 32, -8 )
texture = ExtResource( 7 )

[node name="2" type="Sprite" parent="ItemMenu/M3/BracketsEscences" index="2"]

position = Vector2( 48, 8 )
texture = ExtResource( 7 )

[node name="3" type="Sprite" parent="ItemMenu/M3/BracketsEscences" index="3"]

position = Vector2( 48, 32 )
texture = ExtResource( 7 )

[node name="4" type="Sprite" parent="ItemMenu/M3/BracketsEscences" index="4"]

position = Vector2( 32, 48 )
texture = ExtResource( 7 )

[node name="5" type="Sprite" parent="ItemMenu/M3/BracketsEscences" index="5"]

position = Vector2( 8, 48 )
texture = ExtResource( 7 )

[node name="6" type="Sprite" parent="ItemMenu/M3/BracketsEscences" index="6"]

position = Vector2( -8, 32 )
texture = ExtResource( 7 )

[node name="7" type="Sprite" parent="ItemMenu/M3/BracketsEscences" index="7"]

position = Vector2( -8, 8 )
texture = ExtResource( 7 )

[node name="BracketsOptions" type="Node2D" parent="ItemMenu/M3" index="1"]

position = Vector2( -48, -32 )

[node name="0" type="Sprite" parent="ItemMenu/M3/BracketsOptions" index="0"]

position = Vector2( 96, -16 )
texture = ExtResource( 10 )

[node name="1" type="Sprite" parent="ItemMenu/M3/BracketsOptions" index="1"]

position = Vector2( 96, 32 )
texture = ExtResource( 10 )

[node name="2" type="Sprite" parent="ItemMenu/M3/BracketsOptions" index="2"]

position = Vector2( 96, 56 )
texture = ExtResource( 10 )

[node name="AlternateMenus" type="AnimationPlayer" parent="." index="1"]

root_node = NodePath("..")
autoplay = ""
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/Change1 = SubResource( 1 )
anims/Change2 = SubResource( 2 )
anims/Change3 = SubResource( 3 )
anims/SetDefault = SubResource( 4 )
blend_times = [  ]

[node name="FadeToWhite" parent="." index="2" instance=ExtResource( 11 )]


